--- a/public/css/taulell.css
+++ b/public/css/taulell.css
@@ -124,7 +124,35 @@ h1 {
     background-color: #e81919;
 }
 
+.side-areas {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: 200px;
+    left: 0;
+    right: 0;
+    padding: 0 110px;
+    z-index: -1;
+}
 
+.side-rectangle {
+    border: 3px solid green;
+    width: 250px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: green;
+}
+
+.white-square {
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    border: 2px solid black;
+    box-sizing: border-box;
+}
 
 
 
