--- a/public/css/taulell.css
+++ b/public/css/taulell.css
@@ -124,21 +124,21 @@ h1 {
     background-color: #e81919;
 }
 
-.side-areas {
+.equip-area {
     display: flex;
     justify-content: space-between;
     position: absolute;
-    top: 200px;
+    top: 180px;
     left: 0;
     right: 0;
-    padding: 0 110px;
+    padding: 0 90px;
     z-index: -1;
 }
 
-.side-rectangle {
+.area-rectangle {
     border: 3px solid green;
-    width: 250px;
-    height: 400px;
+    width: 300px;
+    height: 500px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -146,13 +146,63 @@ h1 {
     background-color: green;
 }
 
-.white-square {
-    width: 40px;
-    height: 40px;
-    background-color: white;
-    border: 2px solid black;
-    box-sizing: border-box;
+.jugador {
+    position: absolute;
+    width: 75px;
+    height: 75px;
+    background-color: #fff;
+    border: 2px solid #000;
+    border-radius: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 12px;
+    text-align: center;
+    padding: 5px;
+    color: black;
+    word-wrap: break-word;
 }
+
+.local.porter {
+    left: 200px;
+    top: 4%;
+}
+
+.local.defensa {
+    left: 200px;
+    top: 29%;
+}
+
+.local.mig {
+    left: 200px;
+    top: 54%;
+}
+
+.local.davanter {
+    left: 200px;
+    top: 79%;
+}
+  
+.visitant.porter {
+    right: 200px;
+    top: 4%;
+}
+
+.visitant.defensa {
+    right: 200px;
+    top: 29%;
+}
+
+.visitant.mig {
+    right: 200px;
+    top: 54%;
+}
+
+.visitant.davanter {
+    right: 200px;
+    top: 79%;
+} 
 
 
 
