--- a/public/css/taulell.css
+++ b/public/css/taulell.css
@@ -207,6 +207,12 @@ h1 {
 .pressupost {
     text-align: center;
     font-weight: bold;
-    margin-top: 50px;
+    margin-top: 20px;
     color: #333;
+}
+
+.jugador-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
