--- a/public/css/taulell.css
+++ b/public/css/taulell.css
@@ -165,22 +165,22 @@ h1 {
 }
 
 .local.porter {
-    left: 200px;
-    top: 4%;
+    left: 13vw;
+    top: 4vh;
 }
 
 .local.defensa {
-    left: 200px;
+    left: 13vw;
     top: 29%;
 }
 
 .local.mig {
-    left: 200px;
+    left: 13vw;
     top: 54%;
 }
 
 .local.davanter {
-    left: 200px;
+    left: 13vw;
     top: 79%;
 }
   
